2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Initial take on implementing delete.

	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Add http_error_code_from_status helper function.

2008-02-25  Christian Kellner,,,  <gicmo@gnome.org>

	reviewed by: <delete if not using a buddy>

	* daemon/gvfsbackenddav.c: (stat_location), (do_make_directory),
	(do_delete), (g_vfs_backend_dav_class_init):
	* daemon/gvfsbackendhttp.c: (http_error_code_from_status):
	* daemon/gvfsbackendhttp.h:

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Also check if the URL is a directory by doing a PROPFIND in
	addition to the OPTIONS. That will also force authentication
	since some servers (e.g. Zope) allow OPTIONS without doing
	authentication.

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * client/sftpuri.c:
	Make sure both no-port and port 22 refer to the same mount.
	
        * daemon/gvfsbackendsftp.c:
	Support ports. (#518504)

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Keep the SoupMessage around for as long as Multistatus is
	valid.

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Add a SoupSessionAsync to be used for SoupInputStream doesn't
	yet work with SoupSessionSync. Also make sure we share
	authentication.

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	- Port the mount operation to use the sync i/op.
	- Keep the auth information around so we can use them again in
	the case that a subpath requires different authentication. This
	is needed since libsoup will forgot all auth after a 401.
	- Ignore trailing slashes in ms_response_is_target ().
	- Add an initial version of make_directory ().
	* daemon/gvfsbackendhttp.c: 
	* daemon/gvfsbackendhttp.h:
	Add message_new_from_filename_full which will add a trailing "/"