@@ -188,6 +188,9 @@ auth_callback (SMBCCTX *context,
 	  in_keyring = g_vfs_keyring_lookup_password (backend->user,
 						      backend->server,
 						      backend->domain,
+						      NULL,
+						      NULL,
+						      0,
 						      "smb",
 						      &ask_user,
 						      &ask_domain,
@@ -562,6 +565,9 @@ do_mount (GVfsBackend *backend,
 			       op_backend->server,
 			       op_backend->last_domain,
 			       "smb",
+			       NULL,
+			       NULL,
+			       0,
 			       op_backend->last_password,
 			       op_backend->password_save);
   
