@@ -32,6 +32,9 @@ gboolean g_vfs_keyring_lookup_password (const gchar *username,
 					const gchar *host,
 					const gchar *domain,
 					const gchar *protocol,
+					const gchar *object,
+					const gchar *authtype,
+					guint32      port,
 					gchar      **username_out,
 					gchar      **domain_out,
 					gchar      **password);
@@ -39,6 +42,9 @@ gboolean g_vfs_keyring_save_password   (const gchar  *username,
 					const gchar  *host,
 					const gchar  *domain,
 					const gchar  *protocol,
+					const gchar  *object,
+					const gchar  *authtype,
+					guint32       port,
 					const gchar  *password,
 					GPasswordSave flags);
 
